--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "chart.js": "^2.7.3",
     "css-loader": "0.28.4",
     "json-loader": "^0.5.7",
     "live-server": "^1.2.0",
@@ -19,6 +20,7 @@
     "normalize.css": "^8.0.0",
     "nuka-carousel": "^4.4.1",
     "react": "^16.3.2",
+    "react-chartkick": "^0.3.0",
     "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.3.2",
     "react-modal": "2.2.2",
