--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
   "name": "SpaceApp",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "author": "Nicola Iacovelli",
   "license": "MIT",
   "dependencies": {
-    "@material-ui/core": "^3.2.2",
-    "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
-    "babel-loader": "^7.1.4",
+    "@material-ui/core": "^4.12.3",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "1.5.2",
-    "babel-preset-react": "6.24.1",
-    "chart.js": "^2.7.3",
-    "css-loader": "0.28.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "chart.js": "^3.5.1",
+    "css-loader": "^6.3.0",
     "json-loader": "^0.5.7",
-    "live-server": "^1.2.0",
-    "node-sass": "4.5.3",
-    "normalize.css": "^8.0.0",
-    "nuka-carousel": "^4.4.1",
-    "react": "^16.3.2",
-    "react-chartkick": "^0.3.0",
-    "react-circular-progressbar": "^1.0.0",
-    "react-dom": "^16.3.2",
-    "react-modal": "2.2.2",
-    "react-router-dom": "^4.3.1",
-    "sass-loader": "6.0.6",
-    "style-loader": "0.18.2",
-    "validator": "8.0.0",
-    "webpack": "3.1.0",
-    "webpack-dev-server": "3.1.11"
+    "live-server": "^1.2.1",
+    "node-sass": "^6.0.1",
+    "normalize.css": "^8.0.1",
+    "nuka-carousel": "^4.8.0",
+    "react": "^17.0.2",
+    "react-chartkick": "^0.5.2",
+    "react-circular-progressbar": "^2.0.4",
+    "react-dom": "^17.0.2",
+    "react-modal": "^3.14.3",
+    "react-router-dom": "^5.3.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
+    "validator": "^13.6.0",
+    "webpack": "^5.56.1",
+    "webpack-dev-server": "^4.3.0"
   },
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
     "dev-server": "webpack-dev-server"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.8.0"
   }
 }
